--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+CarsCatalog/CarCatalog/Scripts/* linguist-vendored
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
